--- a/src/app/author-list/author-list.component.html
+++ b/src/app/author-list/author-list.component.html
@@ -1,6 +1,6 @@
 <h1>Authors ✍️</h1>
 <ul>
   @for(author of authors; track author.id) {
-    <li>{{author.name}} <a>🔍</a></li>
+    <li>{{author.name}} <a [routerLink]="[author.id]">🔍</a></li>
   }
 </ul>
