--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -22,3 +22,11 @@ li a {
 li a:hover:not(.active) {
   background-color: #111;
 }
+
+.active {
+  background-color: cadetblue;
+}
+
+.active:hover {
+  background-color: #256264;
+}
