--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
-    <li><a>Home</a></li>
-    <li><a>Authors</a></li>
-    <li><a>Books</a></li>
+    <li><a routerLinkActive='active' routerLink='/home'>Home</a></li>
+    <li><a routerLinkActive='active' routerLink='/authors'>Authors</a></li>
+    <li><a routerLinkActive='active' routerLink='/books'>Books</a></li>
   </ul>
 </nav>
