--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -1,16 +1,16 @@
 <div class="info">
   <div>📕</div>
-  <p> {{details?.title}}</p>
+  <p> {{details()?.title}}</p>
 </div>
 <div class="info">
   <div><a>✍️</a></div>
-  <p> {{details?.author?.name}}</p>
+  <p> {{details()?.author?.name}}</p>
 </div>
 <div class="info">
   <div>🏢</div>
-  <p> {{details?.editor}}</p>
+  <p> {{details()?.editor}}</p>
 </div>
 <div class="info">
   <div>📆</div>
-  <p> {{details?.parutionYear}}</p>
+  <p> {{details()?.parutionYear}}</p>
 </div>
