Angular 20 zoneless correction

--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -3,7 +3,7 @@
   <p> {{details()?.title}}</p>
 </div>
 <div class="info">
-  <div><a>✍️</a></div>
+  <div><a [routerLink]="['/authors', details()?.author?.id]">✍️</a></div>
   <p> {{details()?.author?.name}}</p>
 </div>
 <div class="info">
